--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,8 +22,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.5",
-    "redux": "^5.0.1"
+    "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
